--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.3.8
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/json/movies.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
