--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  swipe_cards: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
